examples/kubernetes/teastore-clusterip-istio.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: teastore-db
spec:
  selector:
    matchLabels:
      app: teastore
      run: teastore-db
  template:
    metadata:
      labels:
        app: teastore
        run: teastore-db
    spec:
      containers:
        - name: teastore-db
          image: descartesresearch/teastore-db
          ports:
            - containerPort: 3306
---
apiVersion: v1
kind: Service
metadata:
  name: teastore-db
  labels:
    app: teastore
    run: teastore-db
spec:
  ports:
    - port: 3306
      protocol: TCP
      name: mysql
  selector:
    run: teastore-db
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: teastore-registry
spec:
  selector:
    matchLabels:
      app: teastore
      run: teastore-registry
  template:
    metadata:
      labels:
        app: teastore
        run: teastore-registry
    spec:
      containers:
        - name: teastore-registry
          image: descartesresearch/teastore-registry
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: teastore-registry
  labels:
    app: teastore
    run: teastore-registry
spec:
  ports:
    - port: 8080
      protocol: TCP
      name: http
  selector:
    run: teastore-registry
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: teastore-persistence
spec:
  selector:
    matchLabels:
      app: teastore
      run: teastore-persistence
  template:
    metadata:
      labels:
        app: teastore
        run: teastore-persistence
    spec:
      containers:
        - name: teastore-persistence
          image: descartesresearch/teastore-persistence
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: teastore-persistence
  labels:
    app: teastore
    run: teastore-persistence
spec:
  ports:
    - port: 8080
      protocol: TCP
      name: http
  selector:
    run: teastore-persistence
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: teastore-auth
spec:
  selector:
    matchLabels:
      app: teastore
      run: teastore-auth
  template:
    metadata:
      labels:
        app: teastore
        run: teastore-auth
    spec:
      containers:
        - name: teastore-auth
          image: descartesresearch/teastore-auth
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: teastore-auth
  labels:
    app: teastore
    run: teastore-auth
spec:
  ports:
    - port: 8080
      protocol: TCP
      name: http
  selector:
    run: teastore-auth
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: teastore-image
spec:
  selector:
    matchLabels:
      app: teastore
      run: teastore-image
  template:
    metadata:
      labels:
        app: teastore
        run: teastore-image
    spec:
      containers:
        - name: teastore-image
          image: descartesresearch/teastore-image
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: teastore-image
  labels:
    app: teastore
    run: teastore-image
spec:
  ports:
    - port: 8080
      protocol: TCP
      name: http
  selector:
    run: teastore-image
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: teastore-recommender
spec:
  selector:
    matchLabels:
      app: teastore
      run: teastore-recommender
  template:
    metadata:
      labels:
        app: teastore
        run: teastore-recommender
    spec:
      containers:
        - name: teastore-recommender
          image: descartesresearch/teastore-recommender
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: teastore-recommender
  labels:
    app: teastore
    run: teastore-recommender
    service: teastore-recommender
spec:
  ports:
    - port: 8080
      protocol: TCP
      name: http
  selector:
    run: teastore-recommender
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: teastore-webui
spec:
  selector:
    matchLabels:
      app: teastore
      run: teastore-webui
  template:
    metadata:
      labels:
        app: teastore
        run: teastore-webui
    spec:
      containers:
        - name: teastore-webui
          image: descartesresearch/teastore-webui
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: teastore-webui
  labels:
    app: teastore
    run: teastore-webui
    service: teastore-webui
spec:
  ports:
    - port: 8080
      protocol: TCP
      name: http
  selector:
    run: teastore-webui
